--- a/_posts/2023-02-07-project-1.markdown
+++ b/_posts/2023-02-07-project-1.markdown
@@ -5,11 +5,16 @@ layout: default
 modal-id: 1
 date: 2023-02-07
 img: sleep.png
+img2: 
 thumbnail: sleep.png
 alt: image-alt
 update: 2023/02/07
-technology: Kotlin
+technology: Android, Kotlin, BLE, REST API
 code: 
-description: 수면케어 통계 조회(Rest API 통신) / 수면케어 안대 제어(BLE 통신) /수면케어 알람 및 ASMR, 음악 설정(Native)
+demo: 나연테크
+link1: http://www.nayuntech.com/
+description: &#176; 수면케어 통계 조회(Rest API 통신)
+description2: /&#176; 수면케어 안대 제어(BLE 통신)
+description3: \&#176; 수면케어 알람 및 ASMR, 음악 설정(Native) \n *
 
 ---
