--- a/_posts/2023-02-07-project-2.markdown
+++ b/_posts/2023-02-07-project-2.markdown
@@ -5,11 +5,13 @@ layout: default
 modal-id: 2
 date: 2023-02-07
 img: cherry.png
+img2: 
 thumbnail: cherry.png
 alt: image-alt
 update: 2023/02/07
 technology: Dart, JS
-
+demo: 나연테크
+link1: http://www.nayuntech.com/
 description: 숙소 조회 및 예약(Rest API 통신) / 출입키 발급 및 도어락 개폐(BLE) / 지도 검색 및 클러스터링(Kakao SDK)
 
 ---
