--- a/_posts/2024-05-03-project-5.markdown
+++ b/_posts/2024-05-03-project-5.markdown
@@ -1,12 +1,12 @@
 ---
-title: 비타민D 키트 진단 모바이ㅣㄹ 앱
+title: 비타민D 키트 진단 모바일 앱
 subtitle: Android Native
 layout: default
 modal-id: 5
 date: 2024-05-03
 img: vtd1.png
 img2: vtd2.png
-thumbnail: covid1.png
+thumbnail: vtd1.png
 alt: image-alt
 update: 2023/02/07
 technology: Android, Kotlin, Camera2, CameraX, OpenCV
