--- a/_posts/2023-02-07-project-3.markdown
+++ b/_posts/2023-02-07-project-3.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 3
 date: 2023-02-07
 img: product.png
-img2: 
+img2: nayun.png
 thumbnail: product.png
 alt: image-alt
 update: 2023/02/07
@@ -14,6 +14,10 @@ code:
 demo: 나연테크
 link1: http://www.nayuntech.com/
 link2: 
-description: 관리자 로그인(Rest API, Session) / 전자문서 조회 및 송신(Rest API) / 전자문서 및 사용자 통계
+description: 화장품 및 약품 통관 시스템의 고객과 문서 관리를 위한 웹 프로젝트
+description2: 관리자 로그인(Rest API, Session)
+description3: 전자문서 조회 및 송신(Rest API)
+description4: Nuxt Framework를 통한 node.js와 Vue.js의 자동 빌드
+description5: 전자문서 및 사용자 통계
 
 ---
